# pixel_blit_firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  Errata.md  LICENSE  RP2350 Microcontroller - Programmer's .md  RP2350B Datasheet summary.md  TODO.md  bringup_plan.md  build.sh  fseq_player.c  fseq_player.h  fseq_stream_test  fseq_test  ir_control.c  ir_control.h  pixel_blit_firmware.c  prototype_summary.md  rainbow_test.c  rainbow_test.h  rainbow_test.pio  readme.md  run_tests.sh  sh1106.c  sh1106.h  string_length_test.c  string_length_test.h  string_test.c  string_test.h  string_test.pio  toggle_test.c  toggle_test.h
board address prototype/: temp_board_address.c
boards/: pixel_blit.h
debug/: build.sh  config.csv  debug_parser  debug_parser.c
debug/debug_parser.dSYM/Contents/: Info.plist
debug/debug_parser.dSYM/Contents/Resources/DWARF/: debug_parser
debug/debug_parser.dSYM/Contents/Resources/Relocations/aarch64/: debug_parser.yml
docs/: pb_led_driver_code_review.md  pb_led_driver_design.md  reactive_architecture.md
lib/fseq_parser/: CMakeLists.txt  README.md
lib/fseq_parser/include/: fseq_parser.h
lib/fseq_parser/src/: fseq_parser.c
lib/fseq_parser/test/: test_main.c  test_streaming.c
lib/pb_led_driver/: CMakeLists.txt  README.md  pb_led_driver.c  pb_led_driver.h  pb_led_driver_color.c  pb_led_driver_hw.c  pb_led_driver_raster.c  test_pb_led_driver.c  ws2811_parallel.pio
lib/sd_card/: hw_config.c  my_rtc.c
lvds/: CMakeLists.txt  blink.c  parallel_out.pio  vcocalc.py
lvds/proto/proto/: board_filter.pio  parallel_in.pio
src/: action.h  app_state.h  board_config.c  board_config.h  core1_task.c  core1_task.h  flash_settings.c  flash_settings.h  main.c  rainbow_pio.h  reducer.c  reducer.h  sd_ops.c  sd_ops.h  side_effects.c  side_effects.h  views.c  views.h
test/board_config/: CMakeLists.txt  pb_led_driver.h  pb_led_driver_stub.c  test_board_config.c
test/sample_configs/: README.md  config_full_32_strings.csv  config_malformed.csv  config_single_board_3_strings.csv  config_single_board_gaps.csv  config_two_boards.csv
